--- a/src/Wishlist.Web/Wishlist.Web.csproj
+++ b/src/Wishlist.Web/Wishlist.Web.csproj
@@ -249,6 +249,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Wishlist\Create.cshtml" />
     <Content Include="Views\Wishlist\Index.cshtml" />
+    <Content Include="Views\Wishlist\Browse.cshtml" />
+    <Content Include="Views\Wishlist\Share.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
